compil error 1
In file included from /home/pi/midiMind/backend/src/api/commands/../../network/NetworkManager.h:41,
                 from /home/pi/midiMind/backend/src/api/commands/network.cpp:23,
                 from /home/pi/midiMind/backend/src/api/CommandProcessorV2.cpp:55:
/home/pi/midiMind/backend/src/api/commands/../../network/rtpmidi/RtpMidiServer.h:38:10: fatal error: asio.hpp: No such file or directory
   38 | #include <asio.hpp>
      |          ^~~~~~~~~~
compilation terminated.
make[2]: *** [CMakeFiles/midimind.dir/build.make:121: CMakeFiles/midimind.dir/src/api/CommandProcessorV2.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/pi/midiMind/backend/src/core/../network/NetworkManager.h:41,
                 from /home/pi/midiMind/backend/src/core/Application.h:44,
                 from /home/pi/midiMind/backend/src/main.cpp:35:
/home/pi/midiMind/backend/src/core/../network/rtpmidi/RtpMidiServer.h:38:10: fatal error: asio.hpp: No such file or directory
   38 | #include <asio.hpp>
      |          ^~~~~~~~~~
compilation terminated.
make[2]: *** [CMakeFiles/midimind.dir/build.make:79: CMakeFiles/midimind.dir/src/main.cpp.o] Error 1
In file included from /home/pi/midiMind/backend/src/core/../network/NetworkManager.h:41,
                 from /home/pi/midiMind/backend/src/core/Application.h:44,
                 from /home/pi/midiMind/backend/src/core/Application.cpp:39:
/home/pi/midiMind/backend/src/core/../network/rtpmidi/RtpMidiServer.h:38:10: fatal error: asio.hpp: No such file or directory
   38 | #include <asio.hpp>
      |          ^~~~~~~~~~
compilation terminated.
make[2]: *** [CMakeFiles/midimind.dir/build.make:93: CMakeFiles/midimind.dir/src/core/Application.cpp.o] Error 1
/home/pi/midiMind/backend/src/api/MessageEnvelope.cpp:469:27: error: redefinition of ‘const midiMind::protocol::Envelope& midiMind::MessageEnvelope::getEnvelope() const’
  469 | const protocol::Envelope& MessageEnvelope::getEnvelope() const {
      |                           ^~~~~~~~~~~~~~~
In file included from /home/pi/midiMind/backend/src/api/MessageEnvelope.cpp:44:
/home/pi/midiMind/backend/src/api/MessageEnvelope.h:272:31: note: ‘const midiMind::protocol::Envelope& midiMind::MessageEnvelope::getEnvelope() const’ previously defined here
  272 |     const protocol::Envelope& getEnvelope() const { return envelope_; }
      |                               ^~~~~~~~~~~
/home/pi/midiMind/backend/src/api/MessageEnvelope.cpp:473:13: error: redefinition of ‘std::string midiMind::MessageEnvelope::getId() const’
  473 | std::string MessageEnvelope::getId() const {
      |             ^~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/api/MessageEnvelope.h:301:17: note: ‘std::string midiMind::MessageEnvelope::getId() const’ previously defined here
  301 |     std::string getId() const { return envelope_.id; }
      |                 ^~~~~
/home/pi/midiMind/backend/src/api/MessageEnvelope.cpp:477:9: error: redefinition of ‘int64_t midiMind::MessageEnvelope::getTimestamp() const’
  477 | int64_t MessageEnvelope::getTimestamp() const {
      |         ^~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/api/MessageEnvelope.h:306:13: note: ‘int64_t midiMind::MessageEnvelope::getTimestamp() const’ previously defined here
  306 |     int64_t getTimestamp() const { return envelope_.timestamp; }
      |             ^~~~~~~~~~~~
/home/pi/midiMind/backend/src/api/MessageEnvelope.cpp:481:23: error: redefinition of ‘midiMind::protocol::MessageType midiMind::MessageEnvelope::getType() const’
  481 | protocol::MessageType MessageEnvelope::getType() const {
      |                       ^~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/api/MessageEnvelope.h:311:27: note: ‘midiMind::protocol::MessageType midiMind::MessageEnvelope::getType() const’ previously defined here
  311 |     protocol::MessageType getType() const { return envelope_.type; }
      |                           ^~~~~~~
